chore: configure jacoco